引入svg && 初步构建Icon组件

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,10 @@
     "esModuleInterop": true,
     "noUnusedLocals": true
   },
+  "includes": [
+    "types/**/*",
+    "lib/**/*"
+  ],
   "exclude": [
     "node_modules",
     "build",
