--- a/package.json
+++ b/package.json
@@ -31,9 +31,13 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-preset-react-app": "^9.0.0",
     "cross-env": "^5.2.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
+    "svg-sprite-loader": "^4.1.6",
+    "svg-url-loader": "^2.3.2",
     "ts-jest": "^24.0.2",
+    "tslint-loader": "^3.5.4",
     "tslint-react": "^4.0.0",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
@@ -44,7 +48,6 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "tslint": "^5.17.0",
-    "tslint-loader": "^3.5.4",
     "typescript": "^3.5.1"
   }
 }
