--- a/package.json
+++ b/package.json
@@ -31,9 +31,13 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-preset-react-app": "^9.0.0",
     "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "svg-sprite-loader": "^4.1.6",
     "svg-url-loader": "^2.3.2",
     "ts-jest": "^24.0.2",
