--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "README.md"
   ],
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.dev.js",
-    "build": "webpack -p --config webpack.config.prod.js",
-    "test": "jest"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
+    "build": "cross-env NODE_ENV=production webpack -p --config webpack.config.prod.js",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.js --runInBand"
   },
   "repository": {
     "type": "git",
@@ -24,15 +24,22 @@
   },
   "homepage": "https://github.com/x397906946/react-gulu#readme",
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
     "@types/jest": "^24.0.13",
     "@types/node": "^12.0.4",
     "@types/prop-types": "^15.7.1",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^24.8.0",
+    "babel-loader": "^8.0.6",
     "babel-preset-react-app": "^9.0.0",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
