--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
+    "outDir": "dist",
+    "declaration": true,
     "baseUrl": ".",
-    "outDir": "build/dist",
     "module": "esnext",
     "target": "es5",
     "lib": ["es6", "dom"],
     "sourceMap": true,
-    "allowJs": true,
     "jsx": "react",
     "moduleResolution": "node",
     "rootDir": ".",
@@ -16,12 +16,13 @@
     "noImplicitAny": true,
     "importHelpers": true,
     "strictNullChecks": true,
-    "suppressImplicitAnyIndexErrors": true,
+    // "suppressImplicitAnyIndexErrors": true,
+    // https://github.com/Microsoft/TypeScript/issues/28762#issuecomment-443406607
+    // "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "noUnusedLocals": true
   },
-  "includes": [
-    "types/**/*",
+  "include": [
     "lib/**/*"
   ],
   "exclude": [
