--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/prop-types": "^15.7.1",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
+    "@types/react-router-dom": "^4.3.3",
     "@types/react-test-renderer": "^16.8.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^6.26.3",
@@ -65,6 +66,7 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "tslint": "^5.17.0",
     "typescript": "^3.5.1"
   }
