--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jest-junit": "^6.4.0",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
+    "prism-react-renderer": "^0.1.6",
     "prop-types": "^15.7.2",
     "raw-loader": "^3.0.0",
     "react-test-renderer": "^16.8.6",
